[package]
authors = ["david"]
name = "cobweb"
version = "0.1.0"
edition = "2018"
[dependencies]
futures = "0.1.23"
tokio-core = "0.1.17"
tun-tap = "0.1.1"
spake2 = "0.1.1"
keybob = "0.3.1"
iui = "0.3.0"
futures-retry = "0.3.0"
miscreant = "0.4.2"
tokio-io = "0.1.6"
bytes = "0.4.12"
tokio-codec = "0.1.1"
tun-tap-mac = "0.1.2"

[build]
rustflags = ["-Ctarget-feature=+aes"]
